# cpp-examples

./: .gitmodules  README.md  ambiguous_nested_type.cpp
compile-time/: typelist.hpp
language/: Makefile  compile_commands.json  delegating_coroutine.cpp  differing_standard_conformance.cpp  dtor_lifetimes.cpp  forwaring_reference.cpp  generator_range_adaptor.cpp  macro_class_member.cpp  nested_structured_binding.cpp  noicy_class.hpp  noicy_class_demo.cpp  noicy_rule_of_fiver.cpp  private_type_member_access.cpp  requires_expression.cpp  template_invocable.cpp  template_template_parameters.cpp
language/by-value-vs-reference-benchmark/: README.md  compare.bash  main.cpp
proj/cmake-module/: CMakeLists.txt  main.cpp  matrixutils.cpp  matrixutils.hpp  sstd.cpp
proj/exec-module/: .gitignore  CMakeLists.txt  clean.sh  compile-exec-module.sh  compile-main.sh  compile-std.sh  exec-module.cpp  main.cpp  meson.build
proj/hpx/: CMakeLists.txt  README.md  dataflow-fibo.cpp  dataflow-intrest-calculator.cpp  eg1.cpp  hello.cpp
proj/hpx-sycl-schrödinger/: .clang-format  CMakeLists.txt  schr-sycl.cpp
proj/hpx-sycl-schrödinger/idg/: einsum.hpp  generic_algorithm.hpp  sstd.hpp  string_manipulation.hpp  tensor_network.hpp
proj/hpx/.cache/clangd/index/: hello.cpp.22026F3BFF48DA68.idx
proj/pybind/: README.md  example.cpp  meson.build  pyproject.toml
proj/readfifo/: Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  readfifo.cpp
proj/readfifo/gnulib/: Makefile.am  Makefile.in
proj/readfifo/gnulib/m4/: gnulib-cache.m4  gnulib-comp.m4
proj/readfifo/include/: fifo_utils.hpp
proj/readfifo/src/: Makefile.am  Makefile.in  fifo_utils.cpp  readfifo.cpp
proj/sycl-adaptivecpp/: CMakeLists.txt  main.cpp  sstd.cpp  syclutils.hpp
proj/sycl-clang/: CMakeLists.txt  syclutils.cpp
qt6/memory_game/: README  main.cpp
